--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ pytz==2024.1
 requests==2.32.2
 s3transfer==0.10.1
 six==1.16.0
-urllib3==2.2.1
+urllib3
 websockets==12.0
 yarl==1.9.4
 yt-dlp==2024.4.9
