--- a/Dockerfile.pandadlbot
+++ b/Dockerfile.pandadlbot
@@ -16,8 +16,8 @@ RUN apt-get update && apt-get install -y ffmpeg
 # Copy the current directory contents into the container at /app
 COPY . /app/
 
-# Set the working directory to /app/youtube
-WORKDIR /app/youtube
+# Set the working directory to /app/src
+WORKDIR /app/src
 
 # Run main.py when the container launches
 CMD ["python", "main.py"]
