--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,27 @@ version: '3.8'
 
 services:
   pandadlbot:
+    container_name: pandadlbot
     build:
       context: .
+      dockerfile: Dockerfile.pandadlbot
     volumes:
-      - .:/app
-    working_dir: /app/youtube
+      - ./src:/app/src
+    working_dir: /app/src
     command: python main.py
     environment:
       - API_TOKEN=${API_TOKEN}
     ports:
       - "8000:8000"
+    restart: always
+
+  cronjob:
+    container_name: cronjob
+    build:
+      context: .
+      dockerfile: Dockerfile.cronjob
+    volumes:
+      - ./src:/app/src
+    environment:
+      - TZ=UTC
     restart: always
