--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 aioboto3==13.0.1
 aiobotocore==2.13.0
 aiofiles==23.2.1
-aiogram==2.25.2
-aiohttp==3.8.1
+aiogram==3.7.0
+aiohttp==3.9.5
 aioitertools==0.11.0
 aiosignal==1.3.1
+annotated-types==0.7.0
 async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.9.1
@@ -22,6 +23,8 @@ magic-filter==1.0.12
 multidict==6.0.5
 mutagen==1.47.0
 pycryptodomex==3.20.0
+pydantic==2.7.3
+pydantic_core==2.18.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytube==15.0.0
@@ -29,6 +32,7 @@ pytz==2024.1
 requests==2.32.2
 s3transfer==0.10.1
 six==1.16.0
+typing_extensions==4.12.2
 urllib3==2.2.1
 websockets==12.0
 wrapt==1.16.0
