--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiobotocore==2.13.0
 aiofiles==23.2.1
 aiogram==3.7.0
 aiohttp==3.9.5
+aioboto3==13.0.1
 aioitertools==0.11.0
 aiosignal==1.3.1
 annotated-types==0.7.0
@@ -33,7 +34,7 @@ requests==2.32.2
 s3transfer==0.10.1
 six==1.16.0
 typing_extensions==4.12.2
-urllib3==2.2.1
+urllib3
 websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
