--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ aiobotocore==2.13.0
 aiofiles==23.2.1
 aiogram==3.7.0
 aiohttp==3.9.5
-aioboto3==13.0.1
 aioitertools==0.11.0
 aiosignal==1.3.1
 annotated-types==0.7.0
@@ -28,13 +27,15 @@ pydantic==2.7.3
 pydantic_core==2.18.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-slugify==8.0.4
 pytube==15.0.0
 pytz==2024.1
 requests==2.32.2
 s3transfer==0.10.1
 six==1.16.0
+text-unidecode==1.3
 typing_extensions==4.12.2
-urllib3
+urllib3==2.2.1
 websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
