--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.9.1
 boto3==1.34.106
-botocore==1.34.106
+botocore
 Brotli==1.1.0
 certifi==2024.2.2
 charset-normalizer==2.1.1
@@ -35,7 +35,7 @@ s3transfer==0.10.1
 six==1.16.0
 text-unidecode==1.3
 typing_extensions==4.12.2
-urllib3==2.2.1
+urllib3
 websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
