--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name pandabot.ir www.pandabot.ir;
+    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
 
     location /dls {
         alias /usr/share/nginx/html/downloads;
