--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3'
+version: '3.8'
+
 services:
   pandabot:
     container_name: panda-youtube
@@ -14,7 +15,7 @@ services:
       - API_TOKEN=${API_TOKEN}
     ports:
       - "8000:8000"
-    restart: always
+    restart: unless-stopped
 
   nginx:
     build: ./nginx
@@ -22,7 +23,7 @@ services:
     restart: always
     ports:
       - "80:80"
-    environment:
-      - DOMAIN_NAME=${DOMAIN}
+    depends_on:
+      - pandabot
     volumes:
       - ./downloads:/usr/share/nginx/html/downloads
