--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,12 @@
 server {
-    listen 80;
-    server_name ${DOMAIN_NAME} www.${DOMAIN_NAME};
+    listen 8080 default_server;
+    listen [::]:8080 default_server;
+    server_name ${DOMAIN_NAME};
 
-    location /dls {
-        alias /usr/share/nginx/html/downloads;
+    location /dls/ {
+        alias /usr/share/nginx/html/downloads/;
         autoindex off;
+        autoindex_exact_size off;
+        autoindex_localtime on;
     }
 }
